Fixed content overlap footer issue + addtl styling

--- a/client/style/app-detail.less
+++ b/client/style/app-detail.less
@@ -1,5 +1,6 @@
 // App Item: Detail View (Overview, Services, Settings)
 // --------------------------------------------------
 
-.js-editor-tabs {
+.js-editor-content {
+  margin-bottom: @content-margin;
 }
